--- a/sass/_main_style.scss
+++ b/sass/_main_style.scss
@@ -57,6 +57,20 @@ p{
     height: 100%;
 }
 
+.embed-responsive {
+    margin: 0 auto;
+    text-align: center;
+}
+
+.embed-responsive iframe,
+.embed-responsive object,
+.embed-responsive embed,
+.embed-responsive twitterwidget{
+    margin: 0 auto;
+    text-align: center;
+    max-width: 100%;
+}
+
 .clearfix{
     &:after{
         display: table;
@@ -178,7 +192,28 @@ p{
             
         }
     }
+    
+
+    .second-hr{
+        border: none;
+        max-width: 300px;
+        margin: 25px auto;
+
+        &:after{
+            content: "";
+            width: 100%;
+            max-width: 1600px;
+            height: 5px;
+            background-image: url(../images/04subnav_line.png);
+            background-repeat: no-repeat;
+            background-position: center;
+            display: block;
+            margin: 25px auto;
+        }
+    }
 }
+
+
 
 // kv zone
 
@@ -193,13 +228,25 @@ p{
     
 }
 
-.about-wrapper{
+.about-wrapper,.contact-wrapper{
     .header{
         background-size: 100%;
         background-position: center;
         background-repeat: no-repeat;
         padding: 0px 25px 60px;
         background-image: url(../images/13_kvbackgroundB.jpg);
+    }
+}
+
+.contact-wrapper{
+    .header{
+        background-image: url(../images/01_KV%20Scenario.jpg);    
+        background-position: center 20%;
+        
+        h1{
+            color: #fff;
+            text-shadow: 1px 1px 5px rgba(0,0,0,0.3);
+        }
     }
 }
 
@@ -693,7 +740,7 @@ p{
         margin: 0 auto;
         text-align: left;
         position: relative;
-        padding-bottom: 320px;
+        padding-bottom: 310px;
         z-index: 1;
 
         h1,p,span{
@@ -795,5 +842,95 @@ p{
     .main-box{
         max-width: 800px;
         margin: 0 auto;
+    }
+}
+
+.main-tele{
+    margin: -25px auto -35px;
+    display: block;
+    
+    p{
+        color: $theme-color;    
+        font-size: 36px;
+    }
+}
+
+.location-container{
+    background: url(../images/08product_-patternB.jpg);
+    
+    .main-box{
+        max-width: 900px;
+        margin: 0 auto;
+    }
+    
+    .maps{
+        display: inline-block;
+        float: left;
+        width: 60%;
+        padding: 20px;
+        text-align: left;
+        
+        h1{
+            margin: 0;
+            position: relative;
+            margin-left: 1.3em;
+            padding: 0px;
+            color: #fff;
+            text-align: left;
+            margin-bottom: 35px;
+            
+            &:before{
+                position: absolute;
+                left: -24px;
+                top: 12px;
+                content: "";
+                background: $theme-alert;
+                height: 12px;
+                width: 12px;
+                border-radius: 100%;
+                
+            }
+        }
+        
+        p{
+            color: #fff;
+            text-align: left;
+            padding: 0.25em 10px;
+        }
+        
+        .btn{
+            color: #fff;
+            border-color: #fff;
+            margin-left: 15px;
+            margin-top: 45px;
+            
+            i{
+                color:#fff;
+            }
+            
+            &:hover{
+                color: $theme-alert;
+                background: #fff;
+                i{
+                    color: $theme-alert;
+                }
+            }
+        }
+        
+        &:nth-child(1),&:nth-child(4){
+            width: 40%;
+        }
+        
+       
+    }
+    .gm-style .place-card, .gm-style .default-card, .gm-style .directions-card{
+        display: none!important;
+    }
+    .second-hr{
+        width: 100%;
+        padding-top: 1px;
+        max-width: 1440px;
+        clear: both;
+        margin: 15px auto;
     }
 }
