update css and js

--- a/sass/_main_style.scss
+++ b/sass/_main_style.scss
@@ -975,6 +975,11 @@ p{
             display: none;
         }
         
+
+        .first-child{
+            display: block;
+        }
+        
         .slider-box{
             position:absolute;
             left:0;
