--- a/stylesheets/print.css
+++ b/stylesheets/print.css
@@ -1039,7 +1039,11 @@ p {
   width: 100%;
   display: none;
 }
-/* line 978, ../sass/_main_style.scss */
+/* line 979, ../sass/_main_style.scss */
+.concept-slider .main-box .first-child {
+  display: block;
+}
+/* line 983, ../sass/_main_style.scss */
 .concept-slider .main-box .slider-box {
   position: absolute;
   left: 0;
@@ -1048,14 +1052,14 @@ p {
   width: 100%;
   overflow: hidden;
 }
-/* line 986, ../sass/_main_style.scss */
+/* line 991, ../sass/_main_style.scss */
 .concept-slider .main-box .slider-box ul {
   display: flex;
   position: relative;
   left: 0px;
   transition: all 0.7s ease;
 }
-/* line 994, ../sass/_main_style.scss */
+/* line 999, ../sass/_main_style.scss */
 .concept-slider .main-box .slide-dot {
   position: absolute;
   bottom: 15px;
@@ -1063,13 +1067,13 @@ p {
   width: 100%;
   z-index: 100;
 }
-/* line 1001, ../sass/_main_style.scss */
+/* line 1006, ../sass/_main_style.scss */
 .concept-slider .main-box .slide-dot ul {
   text-align: center;
   position: relative;
   z-index: 10;
 }
-/* line 1006, ../sass/_main_style.scss */
+/* line 1011, ../sass/_main_style.scss */
 .concept-slider .main-box .slide-dot ul li {
   display: inline-block;
   height: 8px;
@@ -1081,11 +1085,11 @@ p {
   transition: background 0.7s;
   cursor: pointer;
 }
-/* line 1018, ../sass/_main_style.scss */
+/* line 1023, ../sass/_main_style.scss */
 .concept-slider .main-box .slide-dot ul .active {
   background: #fff;
 }
-/* line 1025, ../sass/_main_style.scss */
+/* line 1030, ../sass/_main_style.scss */
 .concept-slider .main-box .pre-btn, .concept-slider .main-box .next-btn {
   display: inline-block;
   position: absolute;
@@ -1094,28 +1098,28 @@ p {
   z-index: 10;
   cursor: pointer;
 }
-/* line 1032, ../sass/_main_style.scss */
+/* line 1037, ../sass/_main_style.scss */
 .concept-slider .main-box .pre-btn i, .concept-slider .main-box .next-btn i {
   color: #32312e;
   font-size: 32px;
   line-height: 32px;
 }
-/* line 1039, ../sass/_main_style.scss */
+/* line 1044, ../sass/_main_style.scss */
 .concept-slider .main-box .pre-btn {
   display: none;
 }
-/* line 1046, ../sass/_main_style.scss */
+/* line 1051, ../sass/_main_style.scss */
 .concept-slider .main-box .pre-btn {
   left: 0px;
   margin-left: -32px;
 }
-/* line 1052, ../sass/_main_style.scss */
+/* line 1057, ../sass/_main_style.scss */
 .concept-slider .main-box .next-btn {
   right: 0px;
   margin-right: -32px;
 }
 
-/* line 1059, ../sass/_main_style.scss */
+/* line 1064, ../sass/_main_style.scss */
 .concept-info {
   background-color: #6d6d6d;
   max-width: none !important;
@@ -1124,7 +1128,7 @@ p {
   padding: 115px 25px;
   margin: 0 -15px !important;
 }
-/* line 1067, ../sass/_main_style.scss */
+/* line 1072, ../sass/_main_style.scss */
 .concept-info .concept-bg {
   position: absolute;
   top: 0px;
@@ -1135,21 +1139,21 @@ p {
   opacity: 0.5;
   transition: all 15s ease;
 }
-/* line 1076, ../sass/_main_style.scss */
+/* line 1081, ../sass/_main_style.scss */
 .concept-info .concept-bg img {
   width: 100%;
 }
-/* line 1081, ../sass/_main_style.scss */
+/* line 1086, ../sass/_main_style.scss */
 .concept-info .animated {
   margin-top: 0%;
   opacity: 1;
 }
-/* line 1086, ../sass/_main_style.scss */
+/* line 1091, ../sass/_main_style.scss */
 .concept-info .main-box {
   position: relative;
   z-index: 1;
 }
-/* line 1091, ../sass/_main_style.scss */
+/* line 1096, ../sass/_main_style.scss */
 .concept-info h1, .concept-info p {
   color: #fff;
 }
