--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -403,7 +403,8 @@
     }
     
     .product-container {
-        padding: 0px 15px;
+        padding: 0px 15px!important;
+        
         
         .product-header{
             margin: 0 -15px;
