--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -551,7 +551,13 @@
                 width: 100%;
             }
         }
-        
        
+    } 
+    
+    .product-video{
+        padding: 45px 15px;
+        .main-box .video-box{
+            width: 100%;
+        }
     } 
 }
