--- a/sass/_main_style.scss
+++ b/sass/_main_style.scss
@@ -1380,3 +1380,13 @@ p{
         }
     }
 }
+
+.return-product {
+    margin-top: -15px!important;
+    margin-bottom: -15px!important;
+    &:hover{
+        i{
+            transform: translate(-3px,1px)!important;
+        }
+    }
+}
