--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -555,6 +555,7 @@
     } 
     
     .product-video{
+        margin-top: -45px;
         padding: 45px 15px;
         .main-box .video-box{
             width: 100%;
