--- a/sass/_main_style.scss
+++ b/sass/_main_style.scss
@@ -1306,8 +1306,8 @@ p{
     div{
         display: inline-block;
         position: relative;
+        width: 85%;
         max-width: 600px;
-        max-width: 85%;
     }
     
     img{
